--- a/Index.html
+++ b/Index.html
@@ -43,7 +43,7 @@
               <li><a href="#services">Marcas Confiaveis</a></li>
               <li><a href="#lofra">Lofra</a></li>
               <li><a href="#contatos">Contatos</a></li>
-              <li><a href="#mapas">Aonde atendemos!</a></li>
+              <li><a href="#mapas">Aonde atendemos</a></li>
             </ul>
           </li>
         </ul>
