--- a/Index.html
+++ b/Index.html
@@ -41,9 +41,9 @@
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#services">Marcas Confiaveis</a></li>
-              <li><a href="#lofra">Lofra</a></li>
+              <li><a href="../Electromais/Lofra.html">Lofra</a></li>
               <li><a href="#contatos">Contatos</a></li>
-              <li><a href="#mapas">Aonde atendemos!</a></li>
+              <li><a href="#mapas">Aonde atendemos</a></li>
             </ul>
           </li>
         </ul>
@@ -199,7 +199,6 @@
                 <h5>Solicite um de nossos técnicos para realizar o Conserto de Fogão Lofra made in Italy, temos uma
                   grande experiência em conserto de Fogão Lofra, técnicos especializados na marca.</h5>
                 <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-                  <a href="https://w.app/0syabh" class="btn-get-started">Solicite um orçamento!</a>
                 </div>
               </div>
             </div>
@@ -213,12 +212,12 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <a href="Lofra.html"> <!-- Exemplo de link para uma página separada -->
+                  <a href="Lofra.html"> 
                         <img src="assets/img/Lofra Logo.png" class="d-block w-100" alt="Lofra Logo">
                     </a>
                 </div>
                 <div class="carousel-item">
-                  <a href="Lofra.html"> <!-- Exemplo de link para uma página separada -->
+                  <a href="Lofra.html">
                         <img src="assets/img/Lofra.png" class="d-block w-100" alt="Fogão Lofra">
                     </a>
                 </div>
@@ -382,7 +381,6 @@
             <h4>Contatos</h4>
             <p>São Paulo - Brasil</p>
             <p class="mt-4"><strong>Telefone:</strong> <span>+55 (11) 94729-1277</span></p>
-            <!-- <p><strong>Email:</strong> <span>------</span></p> -->
           </div>
 
         </div>
