--- a/Index.html
+++ b/Index.html
@@ -41,7 +41,7 @@
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#services">Marcas Confiaveis</a></li>
-              <li><a href="../Electromais/Lofra.html">Lofra</a></li>
+              <li><a href="Lofra.html">Lofra</a></li>
               <li><a href="#contatos">Contatos</a></li>
               <li><a href="#mapas">Aonde atendemos</a></li>
             </ul>
