Corrijido erro de redirecionamento, ajustes de texto e adicionado modo dark!

--- a/Index.html
+++ b/Index.html
@@ -252,7 +252,7 @@
                   <p>Realizamos reparos em fogões, tanto nacionais quanto importados. Especializamos-nos no conserto de
                     fogões Lofra e de diversas outras marcas. Solicite a visita de um técnico especializado em sua
                     residência.</p>
-                  <a href="https://w.app/9tcygv" class="readmore stretched-link"><span>Faça um orçamento </span><i
+                  <a href="https://wa.me/5511947291277?text=Ol%C3%A1,%20vim%20diretamente%20do%20site%20e%20gostaria%20de%20fazer%20um%20or%C3%A7amento%20para%20um%20reparo%20de%20um%20Fog%C3%A3o!" class="readmore stretched-link"><span>Faça um orçamento </span><i
                       class="bi bi-whatsapp"></i></a>
                 </div>
               </div>
@@ -266,7 +266,7 @@
                   <p>Solicite a visita de um técnico especializado para realizar o conserto do seu forno. Após a
                     realização do orçamento, o reparo será efetuado com peças originais, garantindo qualidade, segurança
                     e durabilidade.</p>
-                  <a href="https://w.app/gdkgjz" class="readmore stretched-link"><span>Faça um orçamento </span><i
+                  <a href="https://wa.me/5511947291277?text=Ol%C3%A1,%20vim%20diretamente%20do%20site%20e%20gostaria%20de%20fazer%20um%20or%C3%A7amento%20para%20um%20reparo%20de%20um%20Forno!" class="readmore stretched-link"><span>Faça um orçamento </span><i
                       class="bi bi-whatsapp"></i></a>
                 </div>
               </div>
@@ -280,7 +280,7 @@
                   <p>Possuímos ampla experiência em sistemas de refrigeração. Nossa equipe de técnicos altamente
                     qualificados realiza a instalação, manutenção e reparos emergenciais em equipamentos de
                     refrigeração.</p>
-                  <a href="https://w.app/jof7wa" class="readmore stretched-link"><span>Faça um orçamento </span><i
+                  <a href="https://wa.me/5511947291277?text=Ol%C3%A1,%20vim%20diretamente%20do%20site%20e%20gostaria%20de%20fazer%20um%20or%C3%A7amento%20para%20um%20reparo%20de%20uma%20Geladeira!" class="readmore stretched-link"><span>Faça um orçamento </span><i
                       class="bi bi-whatsapp"></i></a>
                 </div>
               </div>
@@ -294,7 +294,7 @@
                   <p>Realizamos conserto de máquinas de lavar, conserto de secadoras e conserto de lava e seca. Nossa
                     equipe de técnicos altamente capacitados se desloca até sua residência para executar o reparo do
                     equipamento.</p>
-                  <a href="https://w.app/w9xa2p" class="readmore stretched-link"><span>Faça um orçamento </span><i
+                  <a href="https://wa.me/5511947291277?text=Ol%C3%A1,%20vim%20diretamente%20do%20site%20e%20gostaria%20de%20fazer%20um%20or%C3%A7amento%20para%20um%20reparo%20de%20uma%20Lavadora!" class="readmore stretched-link"><span>Faça um orçamento </span><i
                       class="bi bi-whatsapp"></i></a>
                 </div>
               </div>
@@ -314,7 +314,7 @@
                   <h3>Entre em contato conosco!</h3>
                   <p>📞 Telefones: (11) 4110-5753 | (11) 4252-2212
                     📱 WhatsApp: (11) 94729-1277</p>
-                  <a class="cta-btn" href="https://w.app/rjlcva">Clique para ser direcionado ao WhatsApp</a>
+                  <a class="cta-btn" href="https://wa.me/5511947291277?text=Ol%C3%A1,%20vim%20diretamente%20do%20site%20e%20gostaria%20de%20saber%20sobre%20seus%20servi%C3%A7os!">Clique para ser direcionado ao WhatsApp</a>
                 </div>
               </div>
             </div>
@@ -356,7 +356,7 @@
               CNPJ: 31.855.446.0001-21</p>
           </div>
 
-          <div class="col-lg-2 col-6 footer-links">
+          <div class="col-lg-3 col-6 footer-links">
             <h4>Talvez seja útil</h4>
             <ul>
               <li><a href="#hero">Home</a></li>
@@ -366,7 +366,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-2 col-6 footer-links">
+          <div class="col-lg-3 col-6 footer-links">
             <h4>Nossos serviços</h4>
             <ul>
               <li><a href="#servicos">Conserto e manutenção de Fogões</a></li>
@@ -377,12 +377,6 @@
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-            <h4>Contatos</h4>
-            <p>São Paulo - Brasil</p>
-            <p class="mt-4"><strong>Telefone:</strong> <span>+55 (11) 94729-1277</span></p>
-          </div>
-
         </div>
       </div>
     </div>
@@ -390,9 +384,11 @@
   </footer>
 
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+      class="bi bi-arrow-up-short"></i></a> 
 
-  <a href="https://w.app/rjlcva" id="whatsapp" class="whatsapp d-flex align-items-center justify-content-center">
+      <button id="dark-mode-toggle">🌙</button>
+
+  <a href="https://wa.me/5511947291277?text=Ol%C3%A1,%20vim%20diretamente%20do%20site%20e%20gostaria%20de%20saber%20sobre%20seus%20servi%C3%A7os!" id="whatsapp" class="whatsapp d-flex align-items-center justify-content-center">
     <i class="bi bi-whatsapp"></i>
   </a>
 
